<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.emma.bakingapp.Ui.WelcomeActivity">


    <ImageView
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_chess_cake"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/welcomeBackGroundColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/baking_time"
            android:textSize="40dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/White"
            android:text="@string/baking_time"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:padding="10dp"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="40dp" />

    </LinearLayout>

    <Button
        android:id="@+id/start_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/welcome_button"
        android:textSize="20sp"
        android:text="@string/start_baking"
        android:padding="10dp"
        android:textColor="@color/White"
        android:layout_marginBottom="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
