<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/ingr_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/Black_gray"
        android:textSize="25sp"
        tools:text="@string/title_of_ingredents" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="@dimen/q_and_m_textsize"
            android:textColor="@color/Black_gray_light"
            android:layout_marginLeft="10dp"
            android:text="@string/quantity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:textSize="@dimen/q_and_m_textsize"
            android:textColor="@color/Black_gray_light"
            android:id="@+id/measure_tv"
            tools:text="number 1"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="@dimen/q_and_m_textsize"
            android:textColor="@color/Black_gray_light"
            android:layout_marginLeft="10dp"
            android:text="@string/measurement"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:textSize="@dimen/q_and_m_textsize"
            android:textColor="@color/Black_gray_light"
            android:id="@+id/quantity_tv"
            tools:text="number 2"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp" />

    </LinearLayout>

</LinearLayout>